Fixed draggable on Mobile

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -11,6 +11,18 @@
   font-size: 20px;
   color: white;
 
+  .list-item-container {
+    position: relative;
+
+    .list-item-handle {
+      z-index: 1;
+      position: absolute;
+      left: 0px;
+      top: 10px;
+    }
+  }
+
+
   .list-title {
     text-align: center;
     padding: 10px 0;
